// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<span
  class="mcore-radio mcore-radio--checked"
>
  <span
    class="mcore-radio__widget"
  >
    <span
      class="mcore-radio__inner"
    />
  </span>
  <span
    class="mcore-radio__text"
  >
    选项一
  </span>
  <input
    checked=""
    class="mcore-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio renders correctly 1`] = `
<span
  class="mcore-radio"
>
  <span
    class="mcore-radio__widget"
  >
    <span
      class="mcore-radio__inner"
    />
  </span>
  <span
    class="mcore-radio__text"
  >
    选项一
  </span>
  <input
    class="mcore-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio type is button 1`] = `
<button
  class="mcore-radio"
  type="button"
>
  选项一
  <input
    class="mcore-radio__input"
    type="radio"
    value="0"
  />
</button>
`;

exports[`Radio type is cell 1`] = `
<div
  class="mcore-cell mcore-cell--link"
>
  <div
    class="mcore-cell__inner"
  >
    <div
      class="mcore-cell__header"
    />
    <div
      class="mcore-cell__body"
    >
      <div
        class="mcore-cell__content"
      >
        <span
          class="mcore-radio"
        >
          <span
            class="mcore-radio__widget"
          >
            <span
              class="mcore-radio__inner"
            />
          </span>
          <span
            class="mcore-radio__text"
          >
            选项一
          </span>
          <input
            class="mcore-radio__input"
            type="radio"
            value="0"
          />
        </span>
      </div>
    </div>
    <div
      class="mcore-cell__footer"
    />
  </div>
</div>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="mcore-radio-group mcore-radio-group--xs mcore-radio-group--radius"
>
  <div
    class="mcore-radio-group__inner"
  >
    <span
      class="mcore-radio"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项一
      </span>
      <input
        class="mcore-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="mcore-radio mcore-radio--checked"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="mcore-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="mcore-radio"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项三
      </span>
      <input
        class="mcore-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="mcore-radio-group mcore-radio-group--xs mcore-radio-group--radius"
>
  <div
    class="mcore-radio-group__inner"
  >
    <span
      class="mcore-radio"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项一
      </span>
      <input
        class="mcore-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="mcore-radio mcore-radio--checked"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="mcore-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="mcore-radio"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项三
      </span>
      <input
        class="mcore-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="mcore-radio-group mcore-radio-group--xs mcore-radio-group--radius"
>
  <div
    class="mcore-radio-group__inner"
  >
    <span
      class="mcore-radio mcore-radio--checked"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="mcore-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="mcore-radio"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项二
      </span>
      <input
        class="mcore-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="mcore-radio"
    >
      <span
        class="mcore-radio__widget"
      >
        <span
          class="mcore-radio__inner"
        />
      </span>
      <span
        class="mcore-radio__text"
      >
        选项三
      </span>
      <input
        class="mcore-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;
